# Minecraft-in-C

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.c  voxel_mesh.c  voxel_mesh.h  world.c  world.h
assets/: asset_list.csv
include/: player.h  voxel_mesh.h  world.h
lib/: assets.h  camera.h  csv.h  cube.h  debug.h  events.h  game.h  main.h  main_menu.h  player.h  render.h  shaders.h  textures.h  window.h  windows_compat.h  world.h
src/: assets.c  camera.c  colorchange.frag  csv.c  cube.c  debug.c  events.c  game.c  hello.c  main.c  main_menu.c  orange.frag  player.c  render.c  rotate.vert  sdl.c  shaders.c  textures.c  transform.vert  voxel_mesh.c  window.c  windows_compat.c  world.c
src/shaders/: colorchange.frag  light.frag  main.frag  orange.frag  texture.frag  transform.vert
